syntax = "proto3";

option go_package = "pkg1/pb";

service RentService {
  rpc Rent(RentRequest) returns (RentResponse) {}
}

message RentRequest {
  int32 id = 1;
  string memo = 2;
}

message RentResponse {
  int32 status = 1;
}
